components/31-molecules/contact-details/_contact-details.scss
$avatar-width: 14rem;

.contact-details {
  .inner-box {
    display: flex;
    flex-wrap: wrap;

    > h2 {
      width: 100%;
    }

    &::before {
      @include spot-image('book-light', 7rem);
    }
  }

  &.contact-details-inverted {
    > .inner-box {
      @include theme('border-color', 'color-primary--lighten-4', 'contact-details-border-color');
      border-width: 2px 0;
      border-style: solid;
      background-color: transparent;

      &::before {
        @include spot-image('book', 7rem);
      }
    }
  }

  &-column {
    width: 100%;

    @include tablet {
      width: span(6 of 12);
      margin-right: $gutter-width;

      &:last-of-type {
        max-width: $avatar-width;
        margin-right: 0;
      }
    }

    .image-wrapper {
      img {
        @include tablet {
          max-width: $avatar-width;
        }
      }
    }
  }
}

